fix: 데이터 받을 때가 아닌, 출력할 때만 정렬하도록 수정